<resources>
    <string name="app_name">Aplikasi Cuaca</string>
    <string name="jakarta">Jakarta</string>
    <string name="jombang">Jombang</string>
    <string name="malang">Malang</string>
    <string name="surabaya">Surabaya</string>
    <string name="london">London</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
